--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -87,7 +87,13 @@
             "snack": {
                 "main": "队列消息",
                 "sub": "再付费编号"
-            }
+            },
+            "view": "View Rebill",
+            "id": "ID",
+            "billed": "Bill at",
+            "created": "Created at",
+            "amount": "Amount",
+            "nodata": "No Rebills found."
         },
         "rebill": {
             "history": {
@@ -129,6 +135,14 @@
         "dismiss": "搁置"
     },
     "advancedfilter": {
+        "day": "1D",
+        "week": "1W",
+        "month": "1M",
+        "3month": "3M",
+        "6month": "6M",
+        "year": "1Y",
+        "yeartodate": "YTD",
+        "all": "ALL",
         "from": "从",
         "to": "至",
         "filters": "过滤",
@@ -153,7 +167,9 @@
         "rebill": "再付",
         "success": "成功",
         "decline": "拒绝",
-        "error": "错误"
+        "error": "错误",
+        "refreshdashboardtext": "Refresh Dashboard. Last updated:",
+        "refreshreporttext": "Refresh Report"
     },
     "forminputs": {
         "fullname": "全名",
@@ -445,6 +461,7 @@
             "price": "价格",
             "id": "ID"
         },
+        "filter": "Filter Results",
         "category": "类别",
         "refined": "精选结果",
         "reset": "重置搜索",
@@ -1412,6 +1429,12 @@
         "del": "删除",
         "cancel": "取消"
     },
+    "associatedialog": {
+        "text": "Select entity to associate",
+        "associate": "ASSOCIATE",
+        "cancel": "CANCEL",
+        "entity": "Entity"
+    },
     "inviteuser": {
         "title": "邀请新用户",
         "email": "用户电子邮件",
@@ -1463,5 +1486,18 @@
             "switchtext": "只需点击右上角的帐户按钮，选择您想要访问的帐户，就可以很容易地在此与其他六个帐户之间切换。",
             "cont": "继续"
         }
+    },
+    "share": {
+        "title": "Share",
+        "copy": "Copy to clipboard"
+    },
+    "pagination": {
+        "rowsperpage": "Rows per page"
+    },
+    "snack": {
+      "error": "Error occured, please try again",
+      "updated": "Updated Successfully!",
+      "created": "Created Successfully!",
+      "deleted": "Deleted Successfully!"
     }
 }
