--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -1243,7 +1243,8 @@
 			"title": "Առաքման ստացականի մանրամասներ",
 			"status": "Վիճակ",
 			"number": "Հետագծման համար",
-			"fulfillmentprovider": "Ծառայության մատակարար",
+      "carrier": "Tracking Carrier",
+      "fulfillmentprovider": "Ծառայության մատակարար",
 			"fulfillmentproviderview": "Ծառայության մատակարար"
 		},
 		"history": {
