--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -65,6 +65,17 @@
     "search": "Search"
   },
   "orderengine": {
+    "title": "State Machine",
+    "queue": "Queue",
+    "item": {
+      "recover": "Recover",
+      "bill": "Bill",
+      "failed": "Failed",
+      "hold": "Hold",
+      "pending": "Pending",
+      "shipped": "Shipped",
+      "delivered": "Delivered"
+    },
     "schema": {
       "title": "State Machine Flow",
       "subtitle": "Below is rough flow of all data in SIX, click an element to load details below"
